# test_profile

./: .pypirc  README.md  pyproject.toml  setup.cfg
pyprofile.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
python_profile/: __init__.py  models_personalization.py
python_profile.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
python_profile/pyPROFILE_Saran_PANKAEW.egg-info/: PKG-INFO  SOURCES.txt
python_profile/pyprofile.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/pyPROFILE_Saran_PANKAEW.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
workflows/: publish-to-tests-pypi.yml
