[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyPROFILE_Saran_PANKAEW"
version = "0.0.1"
authors = [
  { name="Saran  PANKAEW", email="saran.pankaew@curie.fr" },
]
description = "pyPROFILE package"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming  :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
  "sklearn",
  "scipy",
  "diptest==0.5.2",
  "pandas","tqdm","datetime",
  "maboss==0.8.5",
]

[project.urls]
"Homepage" = "https://github.com/sysbio-curie/pyPROFILE"
"Bug Tracker" = "https://github.com/sysbio-curie/pyPROFILE/issues"