[metadata]
name = python_profile
version = 0.0.1
author = Saran PANKAEW
author_email = saran.pankaew@curie.fr
description = python version of PROFILE
long_description = file: README.md
url = https://github.com/saran-pankaew/pyPROFILE
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating Systems :: OS Independent

[options]
packages = find:
python_requires = >3.7
include_package_data = False